[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/obstacles/GroundObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/obstacles/Stalagmite.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/obstacles/Bat.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/obstacles/Stalactite.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Button_Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/Title_Font.tres" type="DynamicFont" id=8]
[ext_resource path="res://scripts/ButtonSound.gd" type="Script" id=9]
[ext_resource path="res://sounds/pop2.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/pop1.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/countdown.wav" type="AudioStream" id=12]
[ext_resource path="res://UI.tres" type="Theme" id=13]
[ext_resource path="res://images/background-foliage.png" type="Texture" id=14]
[ext_resource path="res://images/background-wall.png" type="Texture" id=15]
[ext_resource path="res://scripts/CustomBackground.gd" type="Script" id=16]
[ext_resource path="res://images/background-border.png" type="Texture" id=17]
[ext_resource path="res://scenes/obstacles/SpiderStalag.tscn" type="PackedScene" id=18]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform vec2 player_position = vec2(0.5, 0.5);
uniform vec4 color : hint_color = vec4(0.07451, 0.141176, 0.062745, 1);

uniform float MULTIPLIER = 0.8;
uniform float SCALE = 0.4;
uniform float SOFTNESS = 0.6;

void fragment(){
	float val = distance(vec2(UV.x , UV.y * MULTIPLIER), vec2(player_position.x , player_position.y * MULTIPLIER));
	val = val / SCALE;
	float vignette = smoothstep(0.2, SOFTNESS, val);
	COLOR = vec4(color.rgb , vignette );
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/player_position = Vector2( 0.5, 0.5 )
shader_param/color = Color( 0.07451, 0.141176, 0.062745, 1 )
shader_param/MULTIPLIER = 0.8
shader_param/SCALE = 0.4
shader_param/SOFTNESS = 0.6

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2048, 640 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
initial_spawn_time = 1.7
initial_spawn_time_decrease = 0.04
min_spawn_time = 0.5
obstacles = [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 18 ) ]
obstacle_probabilities = [ 2, 3, 3, 2, 1 ]

[node name="Background" type="Node2D" parent="."]
z_index = -2
script = ExtResource( 16 )
texture = ExtResource( 15 )
parallax = Vector2( 0.8, 1 )

[node name="Border" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 16 )
texture = ExtResource( 17 )
parallax = Vector2( 1, 1 )

[node name="Foliage" type="Node2D" parent="."]
z_index = 8
script = ExtResource( 16 )
texture = ExtResource( 14 )
parallax = Vector2( 1.2, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 512 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 384, -192 )
current = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 1.0
drag_margin_right = 0.0
drag_margin_bottom = 1.0

[node name="HiSpawnPt" type="Position2D" parent="."]
position = Vector2( 0, 160 )

[node name="LoSpawnPt" type="Position2D" parent="."]
position = Vector2( 0, 511.184 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="StartAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.0

[node name="Vignette" type="CanvasLayer" parent="."]
layer = 9

[node name="ColorRect" type="ColorRect" parent="Vignette"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1792.0
margin_top = -1088.0
margin_right = 1792.0
margin_bottom = 1088.0
mouse_filter = 2
color = Color( 0.0745098, 0.141176, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="TouchButtonJump" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( -1536, -960 )
shape = SubResource( 3 )

[node name="TouchButtonSlide" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( -1536, 320 )
shape = SubResource( 3 )

[node name="ScoreLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_right = 192.0
margin_bottom = 134.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.996078, 0.980392, 0.878431, 1 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = 896.0
margin_bottom = 384.0
theme = ExtResource( 13 )
custom_colors/font_color = Color( 0.996078, 0.980392, 0.878431, 1 )
text = "Game Over
Your score:
500"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -96.0
margin_right = 128.0
focus_neighbour_bottom = NodePath("../MenuButton")
focus_next = NodePath("../MenuButton")
focus_previous = NodePath("../MenuButton")
theme = ExtResource( 13 )
text = "Replay"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
click_sound = ExtResource( 11 )
focus_sound = ExtResource( 10 )

[node name="MenuButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 128.0
focus_neighbour_top = NodePath("../ReplayButton")
focus_next = NodePath("../ReplayButton")
focus_previous = NodePath("../ReplayButton")
theme = ExtResource( 13 )
text = "Menu"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
click_sound = ExtResource( 11 )
focus_sound = ExtResource( 10 )

[node name="StartLabel" type="Label" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -64.0
margin_right = 192.0
margin_bottom = 70.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 8 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_over" from="Player" to="." method="_on_game_over"]
[connection signal="timeout" from="SpawnTimer" to="." method="spawn_object"]
[connection signal="pressed" from="UI/TouchButtonJump" to="Player" method="queue_jump"]
[connection signal="released" from="UI/TouchButtonJump" to="Player" method="queue_fall"]
[connection signal="pressed" from="UI/TouchButtonSlide" to="Player" method="queue_slide"]
[connection signal="released" from="UI/TouchButtonSlide" to="Player" method="queue_rise"]
[connection signal="focus_entered" from="UI/ReplayButton" to="UI/ReplayButton" method="on_focus"]
[connection signal="mouse_entered" from="UI/ReplayButton" to="UI/ReplayButton" method="on_hover"]
[connection signal="pressed" from="UI/ReplayButton" to="." method="start_countdown"]
[connection signal="focus_entered" from="UI/MenuButton" to="UI/MenuButton" method="on_focus"]
[connection signal="mouse_entered" from="UI/MenuButton" to="UI/MenuButton" method="on_hover"]
